[gd_scene load_steps=3 format=3 uid="uid://dw3ajy8u7rnxr"]

[ext_resource type="Script" path="res://scripts/cutscene/DialoguePlayer.gd" id="1_cs7ce"]
[ext_resource type="PackedScene" uid="uid://b8bw5ikq1wxds" path="res://scenes/cutscene/Dialogue.tscn" id="2_430y0"]

[node name="DialoguePlayer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cs7ce")

[node name="Dim" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.619608)

[node name="LeftDialogue" parent="." instance=ExtResource("2_430y0")]
visible = false
layout_mode = 1

[node name="CenterDialogue" parent="." instance=ExtResource("2_430y0")]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_right = 0.5
offset_left = -405.0
offset_top = -519.0
offset_right = 3.0
offset_bottom = -259.0
grow_horizontal = 2

[node name="RightDialogue" parent="." instance=ExtResource("2_430y0")]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_right = 1.0
offset_left = -795.0
offset_top = -522.0
offset_right = -387.0
offset_bottom = -262.0
grow_horizontal = 0

[node name="Actors" type="Control" parent="."]
anchors_preset = 0
